Fixed background not covering.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,5 +21,6 @@ body {
 @media screen and (min-width: 1440px) {
     body {
         background: url("../images/bg-intro-desktop.png") no-repeat, $red;
+        background-size: cover;
     }
 }
